# trossen_arm_ros

./: README.md  dependencies.repos  package.xml
.github/workflows/: ci.yml  humble.yml  jazzy.yml
launch/: display.launch.py
rviz/: trossen_arm_description.rviz
trossen_arm_bringup/: CMakeLists.txt  package.xml
trossen_arm_bringup/config/: controllers.yaml  dual_arm_controllers.yaml  mixed_modes.yaml
trossen_arm_bringup/demos/: cartesian_demo.py  controllers.py  demo.py  dual_arm_demo.py  mixed_modes_demo.py  single_arm_demo.py
trossen_arm_bringup/launch/: cartesian.launch.py  dual_trossen_arm.launch.py  dual_trossen_arms.launch.py  mixed_modes.launch.py  trossen_arm.launch.py
trossen_arm_bringup/rviz/: dual_arm.rviz
trossen_arm_control/: CMakeLists.txt  package.xml
trossen_arm_control/config/: trossen_arm_controllers.yaml
trossen_arm_control/launch/: trossen_arm.launch.py
trossen_arm_controllers/: CMakeLists.txt  package.xml  trossen_arm_controllers.xml
trossen_arm_controllers/include/trossen_arm_controllers/: cartesian_pose_controller.hpp  gravity_compensation.hpp
trossen_arm_controllers/src/: cartesian_pose_controller.cpp  gravity_compensation.cpp
trossen_arm_description/: package.xml
trossen_arm_description/launch/: description.launch.py  display.launch.py
trossen_arm_description/meshes/wxai_base/: base_link.stl  gripper_left.stl  link_6.stl
trossen_arm_description/meshes/wxai_follower/: gripper_right.stl  link_6.stl
trossen_arm_description/meshes/wxai_leader/: gripper_left.stl  gripper_right.stl  link_1.stl  link_4.stl  link_5.stl  link_6.stl
trossen_arm_description/rviz/: trossen_arm_description.rviz
trossen_arm_description/urdf/: follower.urdf  leader.urdf  wxai.urdf.xacro  wxai_base.urdf  wxai_follower.urdf  wxai_leader.urdf  wxais_base.urdf  wxais_follower.urdf  wxais_leader.urdf
trossen_arm_description/urdf/ros2_control/: wxai.ros2_control.xacro
trossen_arm_hardware/: CMakeLists.txt  README.md  package.xml
trossen_arm_hardware/include/trossen_arm_hardware/: interface.hpp
trossen_arm_hardware/src/: interface.cpp
trossen_arm_moveit/: .setup_assistant  package.xml
trossen_arm_moveit/config/: initial_positions.yaml  joint_limits.yaml  moveit.rviz  moveit_controllers.yaml  ompl_planning.yaml  ros2_controllers.yaml  wxai.ros2_control.xacro  wxai.srdf  wxai_controllers.yaml
trossen_arm_moveit/launch/: demo.launch.py  move_group.launch.py  moveit.launch.py  moveit_rviz.launch.py  rsp.launch.py  setup_assistant.launch.py  spawn_controllers.launch.py  static_virtual_joint_tfs.launch.py  warehouse_db.launch.py
trossen_arm_ros/: package.xml
urdf/: follower.urdf  follower.urdf.xacro  leader.urdf  leader.urdf.xacro
