<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>trossen_arm_description</name>
  <version>1.0.0</version>
  <description>URDF Description package for Trossen Arms</description>

  <author email="trsupport@trossenrobotics.com">Luke Schmitt</author>
  <license>BSD-3-Clause</license>
  <maintainer email="trsupport@trossenrobotics.com">Luke Schmitt</maintainer>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>joint_state_publisher_gui</depend>
  <depend>realsense2_description</depend>
  <depend>robot_state_publisher</depend>
  <depend>rviz2</depend>
  <depend>xacro</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
