<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>trossen_arm_hardware</name>
  <version>1.0.0</version>
  <description>Hardware interfaces for Trossen Arms via ros2_control</description>

  <author email="trsupport@trossenrobotics.com">Luke Schmitt</author>
  <license>BSD-3-Clause</license>
  <maintainer email="trsupport@trossenrobotics.com">Luke Schmitt</maintainer>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>hardware_interface</depend>
  <depend>pluginlib</depend>
  <depend>rclcpp_lifecycle</depend>
  <depend>rclcpp</depend>
  <depend>trossen_arm_driver</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
